Fixed design cards and overflow

--- a/client/src/Components/Card/Card.module.css
+++ b/client/src/Components/Card/Card.module.css
@@ -1,28 +1,60 @@
 
 .div {
-    background-color: #ffdfb09f;
     display: flex;
     flex-direction: column;
+    background-color: #ffdfb09f;
     width: 200px;
     height: 280px;
-    box-shadow: rgba(0, 0, 0, 0.375) 0px 1px 4px;
-    justify-content: space-evenly;
-    padding: 5px;
     margin: 10px;
-}
-
-.nombre {
-    font-size: 20px;
-    margin: 0;
+    box-shadow: rgba(0, 0, 0, 0.375) 0px 1px 4px;
+    border-radius: 3px;
 }
 
 .img{
-    object-fit: contain;
+    object-fit: cover;
     height: 50%;
-    padding: 7px 7px 5px 7px;
+    border-radius: 3px 3px 0 0;
+}
+
+.nombre {
+    font-size: 17px;
+    width: fit-content;
+    margin: 3px auto;
+}
+
+.tempList{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    width: 95%;
+    margin: auto;
+    padding: 0;
+    list-style: none;
+    overflow: auto;
+}
+
+.tempList::-webkit-scrollbar{
+    width: 8px;
+    background-color: #f5ac3fd8;
+    border-radius: 5px;
+}
+
+.tempList::-webkit-scrollbar-thumb{
+    background-color: #f4c988;
+    border-radius: 5px;
+}
+
+.temp {
+    background-color: #96b57c9d;
+    padding: 0 8px;
+    margin: 2px;
+    border-radius: 4px;
 }
 
 .peso {
-    font-size: 15px;
-    margin: 0;
+    font-size: 13px;
+    margin: 0 0 2px 5px ;
+    text-align: start;
 }
