--- a/client/src/Components/Dogs/MyDogs/MyDogs.module.css
+++ b/client/src/Components/Dogs/MyDogs/MyDogs.module.css
@@ -4,6 +4,7 @@
     box-shadow: rgba(0, 0, 0, 0.259) 0px 1px 4px;
     overflow: hidden;
     border-radius: 3px;
+    background-color: #ffe4c2d1;
 }
 
 
