--- a/client/src/Components/Modal/Modal.module.css
+++ b/client/src/Components/Modal/Modal.module.css
@@ -1,7 +1,7 @@
 .div {
     position: absolute;
-    width: 25%;
-    margin: 95px auto;
+    top: 120px;
+    width: 250px;
     background-color: none;
 }
 
@@ -24,4 +24,10 @@
     margin: 0;
     text-align: start;
     list-style: none;
+}
+
+@media screen and (min-width: 700px) {
+    .div{
+        width: 300px;
+    }
 }
